# schedule_optimizer

./: README (расширенный).MD  README.md
schedule_optimizer/: README.md  algorithms.py  app.py  data_loader.py  db_manager.py  models.py  schedule.db  test_schedule.db  Ведомость_осенний_семестр_фейк_0.1x.xlsx  Ведомость_осенний_семестр_фейк_1x.xlsx  Ведомость_осенний_семестр_фейк_2.0x.xlsx  Список_аудиторий_фейк_0.1x.xlsx  Список_аудиторий_фейк_1x.xlsx  Список_аудиторий_фейк_2.0x.xlsx  Список_аудиторий_фейк_8.0x.xlsx
schedule_optimizer/schedule_optimizer/: algorithms.py  app.py  data_loader.py  db_manager.py  main.py  models.py  pyproject.toml  requirements.txt  run.py  Ведомость_осенний_семестр_фейк_0.15x.xlsx  Ведомость_осенний_семестр_фейк_0.1x.xlsx  Ведомость_осенний_семестр_фейк_0.2x.xlsx  Ведомость_осенний_семестр_фейк_1.0x.xlsx  Ведомость_осенний_семестр_фейк_1x.xlsx  Список_аудиторий_фейк_0.15x.xlsx  Список_аудиторий_фейк_0.1x.xlsx  Список_аудиторий_фейк_0.2x.xlsx  Список_аудиторий_фейк_1.0x.xlsx  Список_аудиторий_фейк_1x.xlsx  Список_аудиторий_фейк_8.0x.xlsx
schedule_optimizer/schedule_optimizer/static/: index.html
schedule_optimizer/schedule_optimizer/tests/: test_app.py
schedule_optimizer/schedule_optimizer/tests/output/: 01_data_loader_stats.csv  01_data_loader_stats.xlsx  02_database_operations.csv  02_database_operations.xlsx  03_fitness_function.csv  03_fitness_function.xlsx  09_final_algorithm_comparison.csv  09_final_algorithm_comparison.xlsx  test_schedule_runtime.db
